# Eqvilent_cpp

./: CMakeLists.txt  README.md  build.sh  main.cpp
data/: result_window_10.csv
scripts/: find_angle.py  visualize.py  visualize_input_data.py  visualize_result.py
src/: main.cpp  solution.cpp  solution.h  task.cpp  task.h
tests/: main.cpp  tests.cpp
