cmake_minimum_required(VERSION 3.0)

project(EqvilentCpp LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

file(GLOB SRC_FILES src/*.cpp)

add_executable(solution ${SRC_FILES})

include(FetchContent)
FetchContent_Declare(
    googletest
    URL https://github.com/google/googletest/archive/refs/tags/release-1.12.1.zip
)
FetchContent_MakeAvailable(googletest)

enable_testing()

add_executable(tests tests/tests.cpp src/solution.cpp)

target_link_libraries(tests gtest gtest_main)

add_test(NAME AllTests COMMAND tests)
